--- a/.dvc/config
+++ b/.dvc/config
@@ -2,6 +2,6 @@
     remote = minio_local
 ['remote "minio_local"']
     url = s3://pipelinedata
-    endpointurl = http://localhost:9001
+    endpointurl = http://minio:9000
     access_key_id = admin
     secret_access_key = password
