Change src/train.py, td-agent.conf

--- a/pipeline/td_agent/td-agent.conf
+++ b/pipeline/td_agent/td-agent.conf
@@ -38,7 +38,7 @@
     host elasticsearch
     port 9200
     logstash_format true
-    logstash_prefix fluentd
+    logstash_prefix logstash_app_log 
     logstash_dateformat %Y%m%d
     include_tag_key true
     type_name access_log
@@ -51,6 +51,26 @@
   </store>
 </match>
 
+<match train_log>
+  @type copy
+
+  <store>
+    @type elasticsearch
+    host elasticsearch
+    port 9200
+    logstash_format true
+    logstash_prefix logstash_train_log
+    logstash_dateformat %Y%m%d
+    include_tag_key true
+    type_name access_log
+    tag_key @log_name
+    flush_interval 1s
+  </store>
+
+  <store>
+    @type stdout
+  </store>
+</match>
 <match train_log>
   @type elasticsearch
   host "#{ENV['ELASTICSEARCH_HOST']}" # 0.0.0.0 # localhost
