Better logs parsing

--- a/pipeline/td_agent/td-agent.conf
+++ b/pipeline/td_agent/td-agent.conf
@@ -23,8 +23,28 @@
   bind 0.0.0.0
   body_size_limit 32m
   keepalive_timeout 10s
+  <parse>
+    @type regexp
+    expression /^(?<logtime>[^\]]*) Deploy version\: (?<version>[^ ]*), input vector\: \[(?<age>[^ ]*), (?<sex>[^ ]*), (?<bmi>[^ ]*), (?<bp>[^ ]*), (?<s1>[^ ]*), (?<s2>[^ ]*), (?<s3>[^ ]*), (?<s4>[^ ]*), (?<s5>[^ ]*), (?<s6>[^ ]*)\], prediction\: (?<prediction>[^ ]*)$/ 
+    time_key logtime
+    time_format %Y-%m-%d %H:%M:%S
+    types age:integer,bmi:float,bp:float,s1:integer,s2:float,s3:integer,s4:float,s5:float,s6:integer
+  </parse>
 </source>
 
+<source>
+  @type http
+  port 9880
+  bind 0.0.0.0
+  body_size_limit 32m
+  keepalive_timeout 10s
+  <parse>
+    @type regexp
+    expression /^\[(?<logtime>[^\]]*)\]\: \[\[(?<a1>[^ ]*), (?<a2>[^ ]*), (?<a3>[^ ]*), (?<a4>[^ ]*), (?<a5>[^ ]*), (?<a6>[^ ]*), (?<a7>[^ ]*), (?<a8>[^ ]*), (?<a9>[^ ]*), (?<a10>[^ ]*)\]\]$/
+    time_key logtime
+    time_format %Y-%m-%d %H:%M:%S
+  </parse>
+</source>
 
 <filter>
   @type stdout
