--- a/pipeline/td_agent/td-agent.conf
+++ b/pipeline/td_agent/td-agent.conf
@@ -8,10 +8,6 @@
 #
 # This section matches events whose tag is td.DATABASE.TABLE
 ## match tag=debug.** and dump to console
-<match debug.**>
-  @type stdout
-  @id output_stdout
-</match>
 
 ####
 ## Source descriptions:
@@ -23,6 +19,11 @@
   bind 0.0.0.0
   body_size_limit 32m
   keepalive_timeout 10s
+</source>
+
+<filter app_log>
+  @type parser
+  key_name log
   <parse>
     @type regexp
     expression /^(?<logtime>[^\]]*) Deploy version\: (?<version>[^ ]*), input vector\: \[(?<age>[^ ]*), (?<sex>[^ ]*), (?<bmi>[^ ]*), (?<bp>[^ ]*), (?<s1>[^ ]*), (?<s2>[^ ]*), (?<s3>[^ ]*), (?<s4>[^ ]*), (?<s5>[^ ]*), (?<s6>[^ ]*)\], prediction\: (?<prediction>[^ ]*)$/ 
@@ -30,24 +31,17 @@
     time_format %Y-%m-%d %H:%M:%S
     types age:integer,bmi:float,bp:float,s1:integer,s2:float,s3:integer,s4:float,s5:float,s6:integer
   </parse>
-</source>
+</filter>
 
-<source>
-  @type http
-  port 9880
-  bind 0.0.0.0
-  body_size_limit 32m
-  keepalive_timeout 10s
+<filter train_log>
+  @type parser
+  key_name log
   <parse>
     @type regexp
     expression /^\[(?<logtime>[^\]]*)\]\: \[\[(?<a1>[^ ]*), (?<a2>[^ ]*), (?<a3>[^ ]*), (?<a4>[^ ]*), (?<a5>[^ ]*), (?<a6>[^ ]*), (?<a7>[^ ]*), (?<a8>[^ ]*), (?<a9>[^ ]*), (?<a10>[^ ]*)\]\]$/
     time_key logtime
     time_format %Y-%m-%d %H:%M:%S
   </parse>
-</source>
-
-<filter>
-  @type stdout
 </filter>
 
 <match app_log>
@@ -91,31 +85,10 @@
     @type stdout
   </store>
 </match>
-<match train_log>
-  @type elasticsearch
-  host "#{ENV['ELASTICSEARCH_HOST']}" # 0.0.0.0 # localhost
-  port 9200
-  logstash_format true
-  logstash_prefix logstash_train_log
-</match>
-
-
-<match app_log>
-  @type elasticsearch
-  host "#{ENV['ELASTICSEARCH_HOST']}" # 0.0.0.0 # localhost
-  port 9200
-  logstash_format true
-  logstash_prefix logstash_app_log
-</match>
 
 #
 ## built-in TCP input
 ## @see http://docs.fluentd.org/articles/in_forward
-<source>
-  @type forward
-  @id input_forward
-</source>
-
 ## built-in UNIX socket input
 #<source>
 #  type unix
@@ -125,20 +98,7 @@
 # POST http://localhost:8888/<tag>?json=<json>
 # POST http://localhost:8888/td.myapp.login?json={"user"%3A"me"}
 # @see http://docs.fluentd.org/articles/in_http
-<source>
-  @type http
-  @id input_http
-  port 8888
-</source>
-
 ## live debugging agent
-<source>
-  @type debug_agent
-  @id input_debug_agent
-  bind 127.0.0.1
-  port 24230
-</source>
-
 ####
 ## Examples:
 ##
