--- a/pipeline/td_agent/td-agent.conf
+++ b/pipeline/td_agent/td-agent.conf
@@ -29,7 +29,8 @@
     expression /^(?<logtime>[^\]]*) Deploy version\: (?<version>[^ ]*), input vector\: \[(?<age>[^ ]*), (?<sex>[^ ]*), (?<bmi>[^ ]*), (?<bp>[^ ]*), (?<s1>[^ ]*), (?<s2>[^ ]*), (?<s3>[^ ]*), (?<s4>[^ ]*), (?<s5>[^ ]*), (?<s6>[^ ]*)\], prediction\: (?<prediction>[^ ]*)$/ 
     time_key logtime
     time_format %Y-%m-%d %H:%M:%S
-    types age:integer,bmi:float,bp:float,s1:integer,s2:float,s3:integer,s4:float,s5:float,s6:integer
+    keep_time_key true
+    types age:integer,sex:integer,bmi:float,bp:float,s1:integer,s2:float,s3:integer,s4:float,s5:float,s6:integer,prediction:float
   </parse>
 </filter>
 
@@ -40,7 +41,8 @@
     @type regexp
     expression /^\[(?<logtime>[^\]]*)\]\: \[\[(?<a1>[^ ]*), (?<a2>[^ ]*), (?<a3>[^ ]*), (?<a4>[^ ]*), (?<a5>[^ ]*), (?<a6>[^ ]*), (?<a7>[^ ]*), (?<a8>[^ ]*), (?<a9>[^ ]*), (?<a10>[^ ]*)\]\]$/
     time_key logtime
-    time_format %Y-%m-%d %H:%M:%S
+    time_key_format %Y-%m-%d %H:%M:%S
+    types a1:float,a2:float,a3:float,a4:float,a5:float,a6:float,a7:float,a8:float,a9:float,a10:float
   </parse>
 </filter>
 
@@ -51,11 +53,10 @@
     @type elasticsearch
     host elasticsearch
     port 9200
-    logstash_format true
-    logstash_prefix logstash_app_log 
-    logstash_dateformat %Y%m%d
+    index_name logstash_app_log 
     include_tag_key true
     type_name access_log
+    include_timestamp true
     tag_key @log_name
     flush_interval 1s
   </store>
@@ -72,10 +73,9 @@
     @type elasticsearch
     host elasticsearch
     port 9200
-    logstash_format true
-    logstash_prefix logstash_train_log
-    logstash_dateformat %Y%m%d
+    index_name logstash_train_log
     include_tag_key true
+    include_timestamp true
     type_name access_log
     tag_key @log_name
     flush_interval 1s
