Move td-agent constant to environment variable

--- a/pipeline/go_agent/Dockerfile
+++ b/pipeline/go_agent/Dockerfile
@@ -1,6 +1,7 @@
 FROM gocd/gocd-agent-ubuntu-18.04:v20.10.0
 EXPOSE 5100
 USER root
+ENV TD_AGENT_HOST=td-agent
 COPY requirements.txt requirements.txt
 RUN apt-get update && apt-get install -y --no-install-recommends python3.7 wget
 RUN apt-get install python-pip -y && pip install -r requirements.txt
